<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tunes For You</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="no_acc">DON\'T HAVE AN ACCOUNT YET?</string>
    <string name="registerUnderlined_text"><u>REGISTER</u></string>
    <string name="register_text">Register</string>
    <string name="username_text">Username</string>
    <string name="already_registered_text">ALREADY REGISTERED?</string>
    <string name="loginUnderlined_text"><u>LOGIN</u></string>
    <string name="welcome_text"><b>Welcome</b></string>
    <string name="mood_text"><b>Mood</b></string>
    <string name="genre_text"><b>Genre</b></string>
    <string name="logout_text">Logout</string>
    <string name="my_playlists_text">My Playlists</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="enter_playlist_name">Enter playlist name.</string>
    <string name="playlist_name">Playlist name</string>
    <string name="cancel_text">CANCEL</string>
    <string name="create_text">CREATE</string>
    <string name="play_text">Play</string>
    <string name="add_songs">Add songs</string>
</resources>